Adding footer with GitHub and Twitter links

--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -99,6 +99,10 @@ del {
     text-decoration: line-through;
 }
 
+small {
+    font-size: 0.875em;
+}
+
 sub {
     font-size: 0.875em;
     vertical-align: sub;
